--- a/src/accounts/templates/email/verification.html
+++ b/src/accounts/templates/email/verification.html
@@ -1,10 +1,12 @@
 Bienvenu(e)
 
+Pour finaliser votre inscription sur le site de la billetterie, merci de cliquer sur le lien ci-dessous :
 
     http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 
-    Merci d'activer votre compte.
-
-
-    Si le lien ne fonctionne pas copier et coller le dans la barre d'adresse du navigateur.
+Si le lien ne fonctionne pas, vous pouvez copier et coller le lien ci-desous dans la barre d'adresse du navigateur.
     Lien à copier : http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+
+Cordialement.
+
+L'équipe du site de la billetterie des Jeux Olympiques.
