--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,6 +22,8 @@
           Billetterie des jeux olympiques
         </a>
 
+        <a><div id="countdown" class="navbar-brand text-warning fw-bold">00:00:00</div></a>
+
         <a class="navbar-nav">
           <ul class="nav nav-pills">
           <li class="nav-item dropdown">
@@ -55,6 +57,10 @@
                   alt="Logo" width="30" height="auto" class="d-inline-block align-text-center">
                   Mes billets</a></li>
                   <li><hr class="dropdown-divider"></li>
+
+                  <li><a class="dropdown-item text-info">{{ request.user.email }}</a></li>
+                  <li><hr class="dropdown-divider"></li>
+
 
                 <li><a class="dropdown-item" href="{% url 'logout' %}">
                 <img src="{% static 'logo/deconnexion.png' %}"
@@ -106,6 +112,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+    <script src="{% static 'js/countdown.js' %}"></script>
   </body>
 
 </html>
