--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,7 +22,12 @@
           Billetterie des jeux olympiques
         </a>
 
-        <a><div id="countdown" class="navbar-brand text-warning fw-bold">00:00:00</div></a>
+        <a>
+          <div id="countdown"
+                class="navbar-brand text-primary fw-bold border border-1 border-warning-subtle rounded-3 p-1 shadow">
+            00:00:00
+          </div>
+        </a>
 
         <a class="navbar-nav">
           <ul class="nav nav-pills">
