Modification de la vue vente  -Ajout d'un bouton de génération d'un fichier PDF affichant une vue des ventes par offre, nombre total de vente , somme totale rapportée

--- a/src/eticketing/templates/eticketing/vue_vente.html
+++ b/src/eticketing/templates/eticketing/vue_vente.html
@@ -40,6 +40,10 @@
         </tbody>
     </table>
 
+    <div><form method="get" action="{% url 'generate_sales_pdf' %}" target="_blank">
+    <button type="submit">Générer le PDF</button>
+</form></div>
+
 </div>
 
 {% endblock %}
