Vue définitive avec composants centrés

--- a/src/accounts/templates/accounts/profile.html
+++ b/src/accounts/templates/accounts/profile.html
@@ -22,14 +22,14 @@
             </form>
         </div>
 
-        <div class="text-info border border-2 border-dark-subtle rounded-3 bg-light mt-4 p-2 shadow">
+        <div class="text-info border border-2 border-danger-subtle rounded-3 bg-light mt-4 p-2 shadow">
 
             <h2>Mon mot de passe</h2>
             <hr>
             <a href="{% url 'change-password' %}" class="fw-bold btn btn-outline-info border-2">Je modifie mon mot de passe</a>
         </div>
 
-        <div class="text-info border border-2 border-danger-subtle rounded-3 bg-light my-4 p-2 shadow">
+        <div class="text-info border border-2 border-warning-subtle rounded-3 bg-light my-4 p-2 shadow">
 
             <h2>Mes adresses</h2>
 
