--- a/src/eticketing/templates/eticketing/vue_vente.html
+++ b/src/eticketing/templates/eticketing/vue_vente.html
@@ -9,13 +9,13 @@
         </div>
         <br>
 
-    <table class="table table-striped table-hover table-bordered ">
+    <table class="table table-hover m-4">
         <thead>
             <tr>
                 <th>Événement</th>
                 <th>Offre</th>
                 <th>Nombre de billets vendus</th>
-                <th>Nombre de places restantes</th>
+
             </tr>
         </thead>
         <tbody>
@@ -33,16 +33,20 @@
                         {% endif %}
 
                         <td>{{ offer.total }}</td>
-                        <td>{{ event_data.event.eventSeatAvailable }}</td>
+
                     </tr>
                 {% endfor %}
             {% endfor %}
         </tbody>
     </table>
 
-    <div><form method="get" action="{% url 'generate_sales_pdf' %}" target="_blank">
-    <button type="submit">Générer le PDF</button>
-</form></div>
+    <div class="text-info border border-2 border-danger-subtle rounded-3 bg-light m-5 p-2 shadow">
+        <h2>Génération d'un rapport de ventes par offre</h2>
+        <hr>
+        <a href="{% url 'generate_sales_pdf' %}" class="fw-bold btn btn-outline-info border-2" target="_blank">Génération du rapport</a>
+    </div>
+
+
 
 </div>
 
